camhios en rutas private 2

--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,10 @@
     <!-- <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script> -->
     <!--Custom JavaScript -->
     <script src="assets/js/custom.js"></script>
-
-    <!-- <script src="assets/plugins/styleswitcher/jQuery.style.switcher.js"></script> -->
-
    
-</body>
+    <!-- <script src="assets/plugins/styleswitcher/jQuery.style.switcher.js"></script> -->
+ <script src="assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup.min.js"></script>
+   <script src="assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup-init.js"></script>
+
+  </body>
 </html>
