--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,12 @@
     <!-- <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Google font -->
     <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700%7CNunito:300,600" rel="stylesheet"> 
+   <!-- <link rel="stylesheet" href="assets/css/bootstrap.min.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700%7CNunito:300,600" rel="stylesheet"> 
     <!-- google-fonts 2 -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Anton|Josefin+Sans|Lexend+Deca|Livvic&display=swap" rel="stylesheet">
-</head>
+    <script src="https://kit.fontawesome.com/5e1317ea21.js" crossorigin="anonymous"></script>
+  </head>
 <body>
   <app-root></app-root>
       <!-- Java Script
@@ -25,24 +27,27 @@
     <!-- <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script> -->
     <!-- <script src="assets/js/main.js"></script>  -->
     <script src="assets/plugins/jquery/jquery.min.js"></script>
+    <!-- <script src="assets/js/jquery.stellar.min.js"></script> -->
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="assets/plugins/bootstrap/js/popper.min.js"></script>
+    <!-- <script src="assets/js/jquery.min.js"></script> -->
     <!-- <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>  -->
+    <script src="assets/plugins/bootstrap/js/popper.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
     <!-- <script src="assets/js/perfect-scrollbar.jquery.min.js"></script> -->
     <!--Wave Effects -->
-    <!-- <script src="assets/js/waves.js"></script> -->
+    <!-- <script src="assets/js/waves.js"></script> --}>
     <!--Menu sidebar -->
     <!-- <script src="assets/js/sidebarmenu.js"></script> -->
     <!--stickey kit -->
     <!-- <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script> -->
     <!-- <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script> -->
     <!--Custom JavaScript -->
+  <script src="assets/js/main.js"></script>
     <script src="assets/js/custom.js"></script>
    
     <!-- <script src="assets/plugins/styleswitcher/jQuery.style.switcher.js"></script> -->
  <script src="assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup.min.js"></script>
    <script src="assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup-init.js"></script>
-
+  <!-- <script src=""></script> -->
   </body>
 </html>
