galeria en single

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700%7CNunito:300,600" rel="stylesheet"> 
     <!-- google-fonts 2 -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Anton|Josefin+Sans|Lexend+Deca|Livvic&display=swap" rel="stylesheet">
+    <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/5e1317ea21.js" crossorigin="anonymous"></script>
+
   </head>
 <body>
   <app-root></app-root>
@@ -44,7 +47,7 @@
     <!--Custom JavaScript -->
   <script src="assets/js/main.js"></script>
     <script src="assets/js/custom.js"></script>
-   
+    <!-- <script src=""></script> -->
     <!-- <script src="assets/plugins/styleswitcher/jQuery.style.switcher.js"></script> -->
  <script src="assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup.min.js"></script>
    <script src="assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup-init.js"></script>
