cambios en rutas publicas

--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,17 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css" /> -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMuli:400,700" rel="stylesheet">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">    
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/font-awesome/css/font-awesome.min.css">
     <!-- <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Google font -->
     <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
    <!-- <link rel="stylesheet" href="assets/css/bootstrap.min.css"> -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700%7CNunito:300,600" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700%7CNunito:300,600" rel="stylesheet">
     <!-- google-fonts 2 -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Anton|Josefin+Sans|Lexend+Deca|Livvic&display=swap" rel="stylesheet">
     <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
-
+    <script src="//unpkg.com/timeago.js"></script>
     <script src="https://kit.fontawesome.com/5e1317ea21.js" crossorigin="anonymous"></script>
 
   </head>
@@ -26,7 +26,7 @@
   <app-root></app-root>
       <!-- Java Script
     ================================================== -->
- 
+
     <!-- <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script> -->
     <!-- <script src="assets/js/main.js"></script>  -->
     <script src="assets/plugins/jquery/jquery.min.js"></script>
@@ -47,6 +47,7 @@
     <!--Custom JavaScript -->
   <script src="assets/js/main.js"></script>
     <script src="assets/js/custom.js"></script>
+    <!-- <script src="dist/timeago.js" type="text/javascript"></script> -->
     <!-- <script src=""></script> -->
     <!-- <script src="assets/plugins/styleswitcher/jQuery.style.switcher.js"></script> -->
  <script src="assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup.min.js"></script>
