--- a/src/index.html
+++ b/src/index.html
@@ -20,38 +20,43 @@
     <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
     <script src="//unpkg.com/timeago.js"></script>
     <script src="https://kit.fontawesome.com/5e1317ea21.js" crossorigin="anonymous"></script>
-
-  </head>
-<body>
-  <app-root></app-root>
+    <script src="https://apis.google.com/js/platform.js" ></script>
+    <meta name="google-signin-client_id" content="792650140448-2p45ji7q3durlj89ohdqfkmd17ji560p.apps.googleusercontent.com">
+    <!-- google library -->
+    <script src="https://apis.google.com/js/platform.js" ></script>
+    </head>
+    <body>
+      
+      <app-root></app-root>
       <!-- Java Script
-    ================================================== -->
-
-    <!-- <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script> -->
-    <!-- <script src="assets/js/main.js"></script>  -->
-    <script src="assets/plugins/jquery/jquery.min.js"></script>
-    <!-- <script src="assets/js/jquery.stellar.min.js"></script> -->
-    <!-- Bootstrap tether Core JavaScript -->
-    <!-- <script src="assets/js/jquery.min.js"></script> -->
-    <!-- <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>  -->
-    <script src="assets/plugins/bootstrap/js/popper.min.js"></script>
-    <!-- slimscrollbar scrollbar JavaScript -->
-    <!-- <script src="assets/js/perfect-scrollbar.jquery.min.js"></script> -->
-    <!--Wave Effects -->
-    <!-- <script src="assets/js/waves.js"></script> --}>
-    <!--Menu sidebar -->
-    <!-- <script src="assets/js/sidebarmenu.js"></script> -->
-    <!--stickey kit -->
-    <!-- <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script> -->
-    <!-- <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script> -->
-    <!--Custom JavaScript -->
-  <script src="assets/js/main.js"></script>
-    <script src="assets/js/custom.js"></script>
-    <!-- <script src="dist/timeago.js" type="text/javascript"></script> -->
-    <!-- <script src=""></script> -->
-    <!-- <script src="assets/plugins/styleswitcher/jQuery.style.switcher.js"></script> -->
- <script src="assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup.min.js"></script>
-   <script src="assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup-init.js"></script>
-  <!-- <script src=""></script> -->
-  </body>
-</html>
+        ================================================== -->
+        <!-- <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script> -->
+        <!-- <script src="assets/js/main.js"></script>  -->
+        <!-- <script src="assets/plugins/jquery/jquery.min.js"></script> -->
+        <!-- <script src="assets/js/jquery.stellar.min.js"></script> -->
+        <!-- Bootstrap tether Core JavaScript -->
+        <!-- <script src="assets/js/jquery.min.js"></script> -->
+        <!-- <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>  -->
+        <!-- <script src="assets/plugins/bootstrap/js/popper.min.js"></script> -->
+        <!-- slimscrollbar scrollbar JavaScript -->
+        <!-- <script src="assets/js/perfect-scrollbar.jquery.min.js"></script> -->
+        <!--Wave Effects -->
+        <!-- <script src="assets/js/waves.js"></script> --}>
+          <!--Menu sidebar -->
+          <!-- <script src="assets/js/sidebarmenu.js"></script> -->
+          <!--stickey kit -->
+          <!-- <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script> -->
+          <!-- <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script> -->
+          <!--Custom JavaScript -->
+          <script src="assets/js/main.js"></script>
+          <script src="assets/js/custom.js"></script>
+          <!-- <script src="dist/timeago.js" type="text/javascript"></script> -->
+          <!-- <script src=""></script> -->
+          <!-- <script src="assets/plugins/styleswitcher/jQuery.style.switcher.js"></script> -->
+          <!-- <script src="assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup.min.js"></script> -->
+          <!-- <script src="assets/plugins/Magnific-Popup-master/dist/jquery.magnific-popup-init.js"></script> -->
+          <!-- <script src="https://apis.google.com/js/platform.js" ></script> -->
+          <!-- <script src=""></script> -->
+        </body>
+        </html>
+        
