--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMuli:400,700" rel="stylesheet">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/font-awesome/css/font-awesome.min.css">
-    <!-- <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
-    <!-- Google font -->
-    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+     <!-- animate css -->
+     <link rel="stylesheet" href="assets/css/animate.css">
    <!-- <link rel="stylesheet" href="assets/css/bootstrap.min.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700%7CNunito:300,600" rel="stylesheet">
     <!-- google-fonts 2 -->
-    <link href="https://fonts.googleapis.com/css?family=Abel|Anton|Josefin+Sans|Lexend+Deca|Livvic&display=swap" rel="stylesheet">
+    <!-- roboto  -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500&display=swap" rel="stylesheet">
     <link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
     <script src="//unpkg.com/timeago.js"></script>
     <script src="https://kit.fontawesome.com/5e1317ea21.js" crossorigin="anonymous"></script>
